--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,13 @@
-body{
-    background-color: #f2e5f9;
+/* body {
+    
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0;
+    padding: 0;
+} */
+#home_nav {
+    font-weight: bold;
+    font-size: 18px;
+    margin-left: 10%;
 }
 
 #carousel_img {
@@ -11,15 +19,15 @@ body{
     position: relative;
     display: flex;
     height: 283px;
-    margin-left:20%;
+    margin-left: 20%;
     margin-top: 10%;
     border-radius: 5px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     transition: transform 0.4s;
 }
 
-#hover-underline:hover{
-    transform:translateY(-10px);
+#hover-underline:hover {
+    transform: translateY(-10px);
 }
 
 #hover-underline::after,
