--- a/css/footer.css
+++ b/css/footer.css
@@ -1,5 +1,5 @@
 :root {
-    --footer-bg: #4b3f6e;
+    --footer-bg: #3A3F4B;
     --footer-text: #dcd7d5;
     --footer-heading: #ffffff;
     --footer-link-hover: #ffffff;
@@ -28,8 +28,7 @@ main {
 
 .main-content {
     padding: 2rem 0;
-    background-color: #ffffff;
-    /* Page content needs a background */
+    background-color: #fef9f9;
 }
 
 .main-content-wrapper {
@@ -42,7 +41,7 @@ main {
 .footer-divider {
     line-height: 0;
     /* Removes any extra space around the SVG */
-    background-color: #f2e5f9;
+    background-image: url(../img/home-bg1.png) rotate(180deg);
     /* Match the content background above it */
 }
 
@@ -51,7 +50,7 @@ main {
     width: 100%;
     height: 80px;
     /* Adjust height of the wave */
-    fill: var(--footer-bg);
+    fill: #3A3F4B;
 }
 
 .footer-wave {
