--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
 /* NAVBAR */
 #nav-home {
     background: rgba(255, 255, 255, 0.75);
+    -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
 }
