--- a/css/login.css
+++ b/css/login.css
@@ -95,31 +95,6 @@
     color: #666;
   }
   
-  /* SOCIAL */
-  .social {
-    display: flex;
-    justify-content: center;
-    gap: 15px;
-  }
-  
-  .social i {
-    width: 45px;
-    height: 45px;
-    border: 1px solid #ccc;
-    border-radius: 12px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    transition: 0.3s;
-  }
-  
-  .social i:hover {
-    background: #667eea;
-    color: white;
-    border-color: #667eea;
-  }
-  
   /* OVERLAY */
   .overlay {
     position: absolute;
@@ -161,7 +136,7 @@
   
   .form.register {
     overflow-y: auto;
-    padding-right: 15px;
+    padding: auto;
   }
   
   /* smooth scrollbar */
