--- a/css/login.css
+++ b/css/login.css
@@ -7,7 +7,7 @@
   
   body {
     height: 100vh;
-    background: linear-gradient(135deg, #da6c6d , #fef7f7);
+    background: linear-gradient(135deg, #ff7a7f, #ffb3b6);
     display: flex;
     align-items: center;
     justify-content: center;
