--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,14 @@ body {
     color: #2F2F3A;
 }
 
+#menu {
+    border: 0;
+    background: rgba(255, 255, 255, 0.75);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+
+}
+
 /* NAVBAR */
 #nav-home {
     background: rgba(255, 255, 255, 0.75);
