--- a/css/admin.css
+++ b/css/admin.css
@@ -1,4 +1,4 @@
-#logo{
+#logo {
     margin-left: 40%;
 }
 
@@ -12,4 +12,21 @@
 .admin-sidebar-header h5 span {
     color: #FF5A5F;
     font-weight: 900;
+}
+
+.admin-dashboard {
+    padding: 80px 0;
+    background-color: rgb(254, 250, 250);
+}
+
+.feature-acard {
+    position: relative;
+    background: #fef9f9;
+    padding: 30px 25px;
+    border-radius: 18px;
+    text-align: center;
+    height: 100%;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.06);
+    transition: transform 0.4s ease, box-shadow 0.4s ease;
+    overflow: hidden;
 }
