--- a/css/style.css
+++ b/css/style.css
@@ -284,8 +284,15 @@ body {
 }
 
 .about-card {
-    border-left: 5px solid #FF5A5F;
+    position: relative;
+    background: #fff4f4;
+    padding: 35px;
+    border-radius: 18px;
+    box-shadow: 0 12px 30px rgba(0, 0, 0, 0.08);
+    overflow: visible;
+    border-top: 5px solid #FF5A5F;
 }
+
 
 /* -------------------- Contact us form --------------------------- */
 .form-control {
