--- a/css/style.css
+++ b/css/style.css
@@ -104,16 +104,17 @@ body {
 
 }
 
-.features-header h2 {
+/* .features-header h2 {
     font-size: 2.4rem;
     font-weight: 700;
-}
+} */
 
-.features-header p {
+/* .features-header p {
     max-width: 850px;
     margin: 15px auto 50px;
     color: #555;
-}
+    font-size: 20px;
+} */
 
 
 .feature-card {
@@ -205,7 +206,7 @@ body {
 }
 
 .features-header p {
-    font-size: 1.05rem;
+    font-size: 1.35rem;
     line-height: 1.8;
     color: #555;
     max-width: 820px;
@@ -227,7 +228,7 @@ body {
     opacity: 0.7;
 }
 
-.tcard:hover{
+.tcard:hover {
     opacity: 1;
 }
 
@@ -366,4 +367,65 @@ label.form-label {
     .hero-content h1 {
         font-size: 2.3rem;
     }
+}
+
+.explore-hero {
+    margin-top: 88px;
+    padding: 30px 0;
+    background: #fef9f9;
+    text-align: center;
+}
+
+.explore-section {
+    padding: 15px 0;
+}
+
+.section-title {
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.section-divider {
+    width: 80px;
+    height: 4px;
+    background: #FF5A5F;
+    margin: 0 auto 30px;
+    border-radius: 4px;
+}
+
+.workflow-box {
+    background: #ffffff;
+    padding: 25px;
+    border-radius: 12px;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.05);
+    margin-bottom: 20px;
+}
+
+.workflow-step {
+    font-weight: 600;
+    color: #FF5A5F;
+    margin-bottom: 5px;
+}
+
+.module-card {
+    background: #ffffff;
+    padding: 30px;
+    border-radius: 12px;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.05);
+    height: 100%;
+}
+
+.architecture-box {
+    background: #fff;
+    padding: 30px;
+    border-radius: 12px;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.05);
+    height: 100%;
+    margin-bottom: 10px;
+}
+
+.cta-section {
+    padding: 60px 0;
+    text-align: center;
+    background: #fef9f9;
 }
